--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,10 @@
 }
 
 .login {
+    height: 40px;
+    margin-top: 10px;
     margin-right: 20px;
+    margin-left: 13px;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 20px;
@@ -40,11 +43,10 @@
     font-size: 20px;
 }
 
-/* .nav-items > ul > li */
-.menu-items {
+.nav-items > ul > li{
     padding: 10px;
     margin: 10px;
-    margin-right: 15px;
+    margin-right: 20px;
 }
 
 .res-card {
