Added Tailwind CSS

--- a/styles.css
+++ b/styles.css
@@ -1,114 +1,3 @@
-.cuisine {
-    margin: 0;
-}
-
-.filter {
-    display: flex;
-}
-
-.filter-btn {
-    margin: 10px;
-    cursor: pointer;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-
-.login {
-    height: 40px;
-    margin-top: 10px;
-    margin-right: 20px;
-    margin-left: 13px;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 20px;
-}
-
-.login-list {
-    margin-top: 10px;
-    margin-right: 12px;
-    margin-left: 12px;
-}
-
-.logo {
-    width: 100px;
-}
-
-.nav-items > ul {
-    display: flex;
-    list-style-type: none;
-    font-size: 20px;
-}
-
-.nav-items > ul > li{
-    padding: 10px;
-    margin: 10px;
-    margin-right: 20px;
-}
-
-.res-card {
-    padding: 5px;
-    width: 230px;
-    margin: 5px;
-    background-color: #f0f0f0;
-}
-
-.res-card:hover {
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.res-logo {
-    width: 100%;
-    height: 200px;
-}
-
-.search {
-    padding: 10px;
-    cursor: pointer;
-}
-
-.star {
-    width: 8%;
-    padding-right: 4px;
-}
-
-.rating {
-    display: flex;
-    align-items: center; /* Align items vertically */
-}
-
-.res-name {
-    margin: 15 0 15;
-}
-
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card {
-    padding: 5px;
-    width: 230px;
-    height: 450px;
-    margin: 5px;
-    background-color: #f0f0f0;
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 45px;
-}
-
-.time {
-    margin-left: 10px;
-}
-
-.user-card {
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
